tests/baselines/reference/unionTypeCallSignatures5.errors.txt
unionTypeCallSignatures5.ts(12,1): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'never'.


==== unionTypeCallSignatures5.ts (1 errors) ====
    // #31485
    interface A {
      (this: void, b?: number): void;
    }
    interface B {
      (this: number, b?: number): void;
    }
    interface C {
      (i: number): void;
    }
    declare const fn: A | B | C;
    fn(0);
    ~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'never'.
    